--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.14",
 		"@types/express": "^4.17.18",
 		"@types/node": "^20.8.0",
@@ -24,6 +25,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.5.3"
 	}
 }
